[package]
name = "slaac"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["cargo"] }
pnet = "0.35"
